Fix white space at side of the page issue

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Istok Web', sans-serif;
   font-size:15px;
+  min-width:1080px;
 }
 
 * {
